# music-parser

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py  database.py  main.py
backend/api/: exception_handlers.py
backend/api/v1/: __init__.py  dependencies.py  health.py  parse.py  parse_and_match.py  playlists.py  search.py  sessions.py
backend/core/: __init__.py  download.py  exceptions.py  settings.py
backend/core/analytics/: __init__.py  schemas.py  service.py
backend/core/catalog/: __init__.py  memory.py
backend/core/export/: __init__.py  schemas.py  service.py
backend/core/language/: __init__.py  detector.py  schemas.py
backend/core/matcher/: __init__.py  aliases.py  base.py  evaluation.py  hybrid.py  jaro_winkler.py  (+4 more)
backend/crud/: __init__.py  playlists.py  sessions.py
backend/integrations/: __init__.py  spotify.py  youtube.py
backend/models/: __init__.py  playlist.py  session.py
backend/schemas/: __init__.py  responses.py
backend/tests/: test_database.py  test_migrations.py
datasets/matcher/: candidates.jsonl  labeled_queries.jsonl
datasets/parser/: labeled_tracks.jsonl
docs/: backend-beginner-guide.md  backend-status.md  backend-testing.md  frontend-start.md
frontend/: index.html  package.json
frontend/src/: App.tsx  styles.css
migrations/: README.md  env.py  script.py.mako
migrations/versions/: 20260506_0001_create_playlists.py  20260506_0002_create_user_sessions.py  20260506_0003_add_match_external_url.py
(+55 files in other folders)
