[project]
name = "playlist-parser"
version = "0.1.0"
description = "Research-driven playlist parser web application."
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20",
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.scripts]
evaluate-matcher = "backend.core.matcher.evaluation:main"
evaluate-parser = "backend.core.parser.evaluation:main"

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "isort>=5.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = '''
(
  pytest-cache-files-.*
)
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
cache_dir = "backend/.pytest_cache"
pythonpath = ["."]
testpaths = ["backend/tests"]

[tool.ruff]
exclude = ["pytest-cache-files-*"]
line-length = 88
target-version = "py311"
